Block 10 code update

--- a/Coursework/Blocks/Block10/picasso.html
+++ b/Coursework/Blocks/Block10/picasso.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div class="container">
+      <div class="circle_attribute" id="circle">
+        <a href="formSubmitted.html"><img src="images/sun.jpg" alt="" /></a>
+      </div>
       <div class="box1">
         <img src="images/1.png" alt="" />
       </div>
