--- a/Coursework/Blocks/Block10/formSubmitted.html
+++ b/Coursework/Blocks/Block10/formSubmitted.html
@@ -27,6 +27,12 @@
     <h2>Interest Form</h2>
     <div class="form">
       <form action="picasso.html" method="post">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required />
+        <br />
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required />
+        <br />
         <input type="submit" value="Submit" />
       </form>
     </div>
